# FreelanceGraphicDesignPlatform

./: README.md
contracts/freelance-design/: Cargo.toml
contracts/freelance-design/src/: lib.rs
contracts/hello-world/src/: lib.rs
